--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <img class="social_profile_picture" src="assets/images/avatar-jessica.jpeg" alt="Profile Picture">
         <div class="social_name_location">
             <h1 class="social_title">Jessica Randall</h1>
-            <h2 class="social_description">London, United Kingdom</h2>
+            <p class="social_description">London, United Kingdom</p>
         </div>
         <p class="social_bio">"Front-end developer and avid reader."</p>
         <div class="social_links">
